package Tablero.Vertice.Estructura;

import Jugador.Jugador;
import Tablero.Vertice.Estado;
import Tablero.Vertice.Vertice;

public class PobladoInicial extends Poblado{

    public PobladoInicial(Jugador jugador) {
        super(jugador);
    }

    @Override
    public void ubicarseEnVerticeEnEstado(Estado estado, Vertice vertice) {
        estado.intentarUbicarEstructura(this, vertice);
    }
}
